# rmc-spock

./: CMakeLists.txt  README.md  README.org  config
cmake/: FindYamlCpp.cmake
scripts/: bootstrap.sh  rmc  rose-install-all-deps  rose-install-intel-compilers  rose-install-justin-gnu-compilers  spock-compiler-install-program  spock-install-system-compilers  spock-os-name  spock-wrapper.sh  testing-config  testing-environment.sh
scripts/impl/: basic-support.sh  compiler-support.sh  detect-compiler-characteristics  detect-compiler-features  install-compiler-executable  installation-support.sh  operating-system-name  spock-realpath.sh
scripts/rmc-commands/: build  config  debug  init  install  make
src/: spock-compiler.C  spock-download.C  spock-employ.C  spock-filter.C  spock-ls.C  spock-rm.C  spock-shell.C  spock-using.C
src/Spock/: Context.C  Context.h  DefinedPackage.C  DefinedPackage.h  Directory.C  Directory.h  Environment.C  Environment.h  Exception.h  GhostPackage.C  GhostPackage.h  GlobalFlag.C  GlobalFlag.h  InstalledPackage.C  InstalledPackage.h  Package.C  Package.h  PackageLists.C  PackageLists.h  PackagePattern.C  PackagePattern.h  Solver.C  Solver.h  Spock.C  Spock.h  TemporaryDirectory.h  VersionNumber.C  VersionNumber.h
